# backend/internal/api/model_comment.go
@@ -1,0 +1,307 @@
+/*
+Twitter API
+
+This is a sample server Twitter API server.
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+	"time"
+)
+
+// checks if the Comment type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &Comment{}
+
+// Comment struct for Comment
+type Comment struct {
+	Id *int `json:"id,omitempty"`
+	PostId *int `json:"post_id,omitempty"`
+	UserId *int `json:"user_id,omitempty"`
+	Body *string `json:"body,omitempty"`
+	CreatedAt *time.Time `json:"created_at,omitempty"`
+	UpdatedAt *time.Time `json:"updated_at,omitempty"`
+}
+
+// NewComment instantiates a new Comment object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewComment() *Comment {
+	this := Comment{}
+	return &this
+}
+
+// NewCommentWithDefaults instantiates a new Comment object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewCommentWithDefaults() *Comment {
+	this := Comment{}
+	return &this
+}
+
+// GetId returns the Id field value if set, zero value otherwise.
+func (o *Comment) GetId() int {
+	if o == nil || IsNil(o.Id) {
+		var ret int
+		return ret
+	}
+	return *o.Id
+}
+
+// GetIdOk returns a tuple with the Id field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Comment) GetIdOk() (*int, bool) {
+	if o == nil || IsNil(o.Id) {
+		return nil, false
+	}
+	return o.Id, true
+}
+
+// HasId returns a boolean if a field has been set.
+func (o *Comment) HasId() bool {
+	if o != nil && !IsNil(o.Id) {
+		return true
+	}
+
+	return false
+}
+
+// SetId gets a reference to the given int and assigns it to the Id field.
+func (o *Comment) SetId(v int) {
+	o.Id = &v
+}
+
+// GetPostId returns the PostId field value if set, zero value otherwise.
+func (o *Comment) GetPostId() int {
+	if o == nil || IsNil(o.PostId) {
+		var ret int
+		return ret
+	}
+	return *o.PostId
+}
+
+// GetPostIdOk returns a tuple with the PostId field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Comment) GetPostIdOk() (*int, bool) {
+	if o == nil || IsNil(o.PostId) {
+		return nil, false
+	}
+	return o.PostId, true
+}
+
+// HasPostId returns a boolean if a field has been set.
+func (o *Comment) HasPostId() bool {
+	if o != nil && !IsNil(o.PostId) {
+		return true
+	}
+
+	return false
+}
+
+// SetPostId gets a reference to the given int and assigns it to the PostId field.
+func (o *Comment) SetPostId(v int) {
+	o.PostId = &v
+}
+
+// GetUserId returns the UserId field value if set, zero value otherwise.
+func (o *Comment) GetUserId() int {
+	if o == nil || IsNil(o.UserId) {
+		var ret int
+		return ret
+	}
+	return *o.UserId
+}
+
+// GetUserIdOk returns a tuple with the UserId field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Comment) GetUserIdOk() (*int, bool) {
+	if o == nil || IsNil(o.UserId) {
+		return nil, false
+	}
+	return o.UserId, true
+}
+
+// HasUserId returns a boolean if a field has been set.
+func (o *Comment) HasUserId() bool {
+	if o != nil && !IsNil(o.UserId) {
+		return true
+	}
+
+	return false
+}
+
+// SetUserId gets a reference to the given int and assigns it to the UserId field.
+func (o *Comment) SetUserId(v int) {
+	o.UserId = &v
+}
+
+// GetBody returns the Body field value if set, zero value otherwise.
+func (o *Comment) GetBody() string {
+	if o == nil || IsNil(o.Body) {
+		var ret string
+		return ret
+	}
+	return *o.Body
+}
+
+// GetBodyOk returns a tuple with the Body field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Comment) GetBodyOk() (*string, bool) {
+	if o == nil || IsNil(o.Body) {
+		return nil, false
+	}
+	return o.Body, true
+}
+
+// HasBody returns a boolean if a field has been set.
+func (o *Comment) HasBody() bool {
+	if o != nil && !IsNil(o.Body) {
+		return true
+	}
+
+	return false
+}
+
+// SetBody gets a reference to the given string and assigns it to the Body field.
+func (o *Comment) SetBody(v string) {
+	o.Body = &v
+}
+
+// GetCreatedAt returns the CreatedAt field value if set, zero value otherwise.
+func (o *Comment) GetCreatedAt() time.Time {
+	if o == nil || IsNil(o.CreatedAt) {
+		var ret time.Time
+		return ret
+	}
+	return *o.CreatedAt
+}
+
+// GetCreatedAtOk returns a tuple with the CreatedAt field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Comment) GetCreatedAtOk() (*time.Time, bool) {
+	if o == nil || IsNil(o.CreatedAt) {
+		return nil, false
+	}
+	return o.CreatedAt, true
+}
+
+// HasCreatedAt returns a boolean if a field has been set.
+func (o *Comment) HasCreatedAt() bool {
+	if o != nil && !IsNil(o.CreatedAt) {
+		return true
+	}
+
+	return false
+}
+
+// SetCreatedAt gets a reference to the given time.Time and assigns it to the CreatedAt field.
+func (o *Comment) SetCreatedAt(v time.Time) {
+	o.CreatedAt = &v
+}
+
+// GetUpdatedAt returns the UpdatedAt field value if set, zero value otherwise.
+func (o *Comment) GetUpdatedAt() time.Time {
+	if o == nil || IsNil(o.UpdatedAt) {
+		var ret time.Time
+		return ret
+	}
+	return *o.UpdatedAt
+}
+
+// GetUpdatedAtOk returns a tuple with the UpdatedAt field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Comment) GetUpdatedAtOk() (*time.Time, bool) {
+	if o == nil || IsNil(o.UpdatedAt) {
+		return nil, false
+	}
+	return o.UpdatedAt, true
+}
+
+// HasUpdatedAt returns a boolean if a field has been set.
+func (o *Comment) HasUpdatedAt() bool {
+	if o != nil && !IsNil(o.UpdatedAt) {
+		return true
+	}
+
+	return false
+}
+
+// SetUpdatedAt gets a reference to the given time.Time and assigns it to the UpdatedAt field.
+func (o *Comment) SetUpdatedAt(v time.Time) {
+	o.UpdatedAt = &v
+}
+
+func (o Comment) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o Comment) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Id) {
+		toSerialize["id"] = o.Id
+	}
+	if !IsNil(o.PostId) {
+		toSerialize["post_id"] = o.PostId
+	}
+	if !IsNil(o.UserId) {
+		toSerialize["user_id"] = o.UserId
+	}
+	if !IsNil(o.Body) {
+		toSerialize["body"] = o.Body
+	}
+	if !IsNil(o.CreatedAt) {
+		toSerialize["created_at"] = o.CreatedAt
+	}
+	if !IsNil(o.UpdatedAt) {
+		toSerialize["updated_at"] = o.UpdatedAt
+	}
+	return toSerialize, nil
+}
+
+type NullableComment struct {
+	value *Comment
+	isSet bool
+}
+
+func (v NullableComment) Get() *Comment {
+	return v.value
+}
+
+func (v *NullableComment) Set(val *Comment) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableComment) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableComment) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableComment(val *Comment) *NullableComment {
+	return &NullableComment{value: val, isSet: true}
+}
+
+func (v NullableComment) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableComment) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
