# docs/openapi.yaml
@@ -174,11 +174,8 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: failed to parse request body
+                $ref: "#/components/schemas/Error500Response"
+
   /tweets/{tweetId}:
     get:
       summary: Get tweet
@@ -302,8 +299,6 @@ paths:
           schema:
             type: string
           required: true
-      # security:
-      #   - cookieAuth: []
       responses:
         "200":
           description: A successful response
@@ -379,6 +374,210 @@ paths:
                     type: string
                     example: Internal server error
 
+  /comments:
+    get:
+      summary: Get comments
+      description: Return comments
+      parameters:
+        - name: limit
+          in: query
+          description: Limit
+          required: false
+          schema:
+            type: integer
+            default: 50
+        - name: offset
+          in: query
+          description: Offset
+          required: false
+          schema:
+            type: integer
+            default: 0
+        - name: post_id
+          in: query
+          description: Post ID
+          required: false
+          schema:
+            type: integer
+        - name: sort
+          in: query
+          description: Sort
+          required: false
+          schema:
+            type: string
+            enum:
+              - created_at
+              - created_at:
+                  - asc
+                  - desc
+            default: created_at:desc
+      responses:
+        "200":
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Comments"
+        "400":
+          description: Invalid parameter
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Invalid parameter
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error404Response"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error500Response"
+    post:
+      summary: Create a new comment
+      description: Create a new comment for a post.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user_id:
+                  type: integer
+                  description: "Reference to User ID"
+                  example: 1
+                title:
+                  type: string
+                  example: Hello World
+                body:
+                  type: string
+                  example: Hello World
+              required:
+                - user_id
+                - title
+                - body
+      responses:
+        "201":
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+                  created_at:
+                    type: string
+                    format: date-time
+                    example: 2021-01-01T00:00:00Z
+        "400":
+          description: Invalid parameter
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Invalid parameter
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error500Response"
+
+  /comments/{commentId}:
+    put:
+      summary: Update a comment
+      description: Update a specific comment by ID.
+      parameters:
+        - name: commentId
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                body:
+                  type: string
+                  example: Hello World
+              required:
+                - body
+      responses:
+        "204":
+          description: Updated comment entity
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+                  updated_at:
+                    type: string
+                    format: date-time
+                    example: "2021-01-01T00:00:00Z"
+        "400":
+          description: Comment not found or not owned by the user
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Comment not found or not owned by the user
+    delete:
+      summary: Delete a comment
+      description: Delete a specific comment by ID.
+      parameters:
+        - name: commentId
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: A successful response
+        "400":
+          description: Comment not found or not owned by the user
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Comment not found or not owned by the user
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error404Response"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error500Response"
+
 components:
   schemas:
     User:
@@ -444,6 +643,33 @@ components:
         properties:
           tweet:
             $ref: "#/components/schemas/Tweet"
+    Comment:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        post_id:
+          type: integer
+          example: 1
+        user_id:
+          type: integer
+          example: 1
+        body:
+          type: string
+          example: 新しいプロジェクトを始めるのが楽しみです！
+        created_at:
+          type: string
+          format: date-time
+          example: "2021-01-01T00:00:00Z"
+        updated_at:
+          type: string
+          format: date-time
+          example: "2021-01-01T00:00:00Z"
+    Comments:
+      type: array
+      items:
+        $ref: "#/components/schemas/Comment"
     Error404Response:
       type: object
       properties:
